--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
+  provider: ^6.1.1
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.13.0
+  sqflite: ^2.3.2
+  path: ^1.9.0
+  shared_preferences: ^2.2.2
+# The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  cloud_firestore: ^5.6.9
-  sqflite: ^2.4.2
-  provider: ^6.1.5
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
